netpol/dev-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: dev-network-policy
  namespace: dev

spec:
  podSelector:
    matchLabels:
      app: nginx

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dev
    ports:
    - protocol: TCP
      port: 80
