netpol/test-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: test-network-policy
  namespace: test

spec:
  podSelector:
    matchLabels:
      app: nginx

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: test
    ports:
    - protocol: TCP
      port: 80
